less/base.less
/* ... */
// Seite Neuer Zugang (nicht eingeloggt)
#page-login-signup.notloggedin {
	& .header-banner {
		display:block; visibility:visible;
	}
	& #region-main-inner div[role="main"]{
		background-color:#ffffff;
		padding:0px 20px 20px 20px;
		margin-bottom:20px;
	}
	& .mform fieldset.collapsible legend a.fheader {
		margin-left:0px;
	}
}
// ------------------------------------------------------------------------------
// Dashboard-Seite
.page-header-image img {
	width:70px; 
	height:70px;
	margin-top:15px;
	margin-bottom:10px;
}

// ------------------------------------------------------------------------------
// Farben 
a {
	color: @link-color;
	&:hover {
		color:@link-hover-color;
	}
}
#copyright {color:rgba(255, 255, 255, 0.6);}

// ------------------------------------------------------------------------------
// Schrift
h1, .h1, h2, .h2, h3, .h3 {
	margin-top:10px;
	margin-bottom:10px;
	font-size:20px;
}
h1, .h1 {
	font-size:22px;
	line-height:1.231;
}
h2, .h2 {
	font-size:20px;
	line-height:1.231;
}
h3, .h3 {
	font-size:18px;
	line-height:1.231;
}
h4, .h4 {
	font-size:16px;
	line-height:1.231;
}
.course-content ul.topics li.section .content, .course-content ul.weeks li.section .content {
	margin-left:10px;
	margin-right:10px;
	& ul {
		margin-top:20px;
	}
}
.editing .course-content ul.topics li.section .content ul, .editing .course-content ul.weeks li.section .content ul {margin-top:0px;}
 
 // ------------------------------------------------------------------------------
// Block Webkonf - Seite
.course-content.webkonf {
	background-color:#fff;
	margin-bottom:20px;
	padding:0px 20px 20px 20px;
	.generaltable h3 { // Anpassung für alten Webkonfblock!
		font-size:14px;
		line-height:1.1;
		margin:0px;
		padding:0px;
		font-weight:bold;
	}
}

// ------------------------------------------------------------------------------
// Block Kalender Post
.block.block_calendar_month .content {
	padding:10px;
	h3 {
		font-size:16px;
		margin-top:10px;
	}
}
.calendar_event_global{
	background-color:#a6d1ab;	
}
.calendar_event_course{
	background-color:#dba3c2;	
}
.calendar_event_group {
	background-color:#ebdea6;	
}
.calendar_event_user {
	background-color:#a6b3d1;	
}
// ------------------------------------------------------------------------------
// Kurslisten

// Seite Kurse
#page #region-main .course_category_tree .category .info {
	background-color:transparent;
	border-width:0px;
	border-radius: 0px 0px 0px 0px;
	-moz-border-radius: 0px 0px 0px 0px;
	-webkit-border-radius: 0px 0px 0px 0px;
	border: 0px solid #000000;
	-webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
	-moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
	box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
	h4.categoryname {
		font-size:16px;
	}
}
#page .panel {	
	background-color:@brand-bg;
	border:0px; border-left:2px solid @block-border;
	-webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
	-moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
	box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
	& .panel-heading {
		border-radius: 0px 0px 0px 0px;
		-moz-border-radius: 0px 0px 0px 0px;
		-webkit-border-radius: 0px 0px 0px 0px;
		border: 0px solid #000000;
		border:0px solid transparent;
	}
}
.pagelayout-frontpage {
	.generalbox {
		background-color:#fff;
		padding:10px 0px 20px 0px; // vorher: padding:20px; 
	}
	#page .panel{
		background-color:#fff;
		.panel-heading {
			padding-bottom:0px;
			.coursename a {
				font-size:18px;
			}
		}
	}
}
.pagelayout-frontpage #page #frontpage-course-list .panel {
	background-color:@brand-bg;
}
.block_vfh_course_overview {
	.content h2 {
		fontsize:18px;
	}
	& .courses_of_semester {
		margin-left:10px;
		& a {
			background-image:url([[pix:core|i/course]]);
			background-position: left 0.2em;
			background-repeat: no-repeat;
			padding: 3px 0px 5px 21px;	
			font-size:13px;
		}
	}
}
.block_course_overview .coursebox {
	padding:5px;
	.course_title h2{
		background-image:url([[pix:core|i/course]]);
		background-position: left 0.2em;
		background-repeat: no-repeat;
		padding: 3px 0px 5px 21px;	
		font-size:13px;
	}
	.activity_info {
		margin-left:20px;
		font-size: 12px;
	} 

}
.block_course_overview .content {
	margin:0px 10px;	
}
.coursebox .info .coursename {
	margin-bottom: 10px;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 10px;
    padding-bottom: 5px;
    padding-left: 0;
    padding-right: 0;
    padding-top: 5px;
	& a {
		background-image:url([[pix:core|i/course]]);
		background-position: left 0.2em;
		background-repeat: no-repeat;
		padding: 3px 0px 5px 21px;	
		font-size:13px;
		
	}
}
course_category_tree .category.with_children{
	margin-top:10px;
}

// Seite User Einstellungen
#page-user-preferences {
	#region-main-inner div[role="main"] {
		padding:15px 40px;
		& h2 {
			margin-left:-15px;
		}
	}
}
// ------------------------------------------------------------------------------
// Weitere Anpassungen
// ------------------------------------------------------------------------------
// Auszeichnungsblock
.block_badges {
	& .badges li {
		width: 30%;
		padding-bottom:10px;
		& .badge-image {
			width:65px;
			height:65px;
		}		
	}
}
// Webkonferenz-Block
.webkonfblock_content {
  & img {
	height: auto;
    margin-bottom: 8px;
    margin-right: 5%;
    max-width: 99px;
    width: 45%;
  }
  .webkonfblock_grouplisting {
	 margin-bottom:10px;
	 margin-top:-10px;
	 & h3 {
		font-size:16px;
		line-height:18px;
		margin-top:20px;
	 }
	 & a {
		background-image:url([[pix:core|i/group]]);
		background-position: left 0.2em;
		background-repeat: no-repeat;
		padding: 3px 0px 5px 24px;	
		font-size:13px;
		line-height: 22px;
		margin-left: 25px;
	}
  }
}
// Reiternavigation
ul.nav-tabs.nav-justified {
	margin-left:0px;
	margin-bottom:25px;
}
/* ... */

